--- a/recipe.html
+++ b/recipe.html
@@ -46,7 +46,7 @@
     <li>Freshly ground black pepper</li>
   </ul>
 </section>
-<secion>
+<section>
   <h3>Preparation</h3>
   
   <ol>
@@ -57,8 +57,8 @@
     <li>To the pot, add the Cheddar, Velveeta, Pecorino Romano, mustard powder, onion powder and cayenne, and season generously with salt and black pepper. Whisk until the cheese is melted and smooth like nacho cheese. Add the drained pasta, breaking up any clumps, and stir until evenly coated in the cheese sauce. Taste and adjust seasoning with salt and pepper.</li>
     <li>Transfer to a 9-by-13-inch baking pan or dish and bake until bubbling at the edges, 15 to 20 minutes. Serve immediately.</li>
   </ol>  
-  </secion>
-  <secion>
+  </section>
+  <section>
   <h3>Nutritional Information</h3>
   
   <ul>
@@ -73,7 +73,7 @@
     <li>44 grams protein</li>
     <li>1311 milligrams sodium</li>
   </ul>
-  </secion>
+  </section>
   </article>
   <footer>
     <p>A class project by Celeste Olivarez!</p>
