--- a/recipe.html
+++ b/recipe.html
@@ -19,7 +19,7 @@
     <dt>Yield:</dt>
     <dd>6 to 8 servings</dd>
     <dt>Rating:</dt>
-    <dt>4 out of 5</dt>
+    <dd>4 out of 5</dd>
   </dl>
 
 <figure>
