--- a/recipe.html
+++ b/recipe.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="reset.css">  </link>
+  <link rel="stylesheet" href="styles.css">  </link>
   <title>Creamy Baked Macaroni and Cheese</title>
 </head>
+
 <body>
-  <article>
+
+<article>
+  <div id="head-section">
   <h1>Creamy Baked Macaroni and Cheese</h1>
 
   <h2>Brought to you by <a href="https://cooking.nytimes.com/recipes/1022733-creamy-baked-macaroni-and-cheese">New York Times Cooking</a></h2>
@@ -21,15 +26,16 @@
     <dt>Rating:</dt>
     <dd>4 out of 5</dd>
   </dl>
-
-<figure>
+  </div>
+<figure id="main-recipe-photo">
   <img src="nyt_mac_cheese.jpg" alt="Creamy Baked Macaroni and Cheese">
   <caption>Photo and food styling by Christopher Testani</caption>
 </figure>
-  
-  <p class="intro">This macaroni and cheese recipe, inspired by Stouffer's, delivers the best of all worlds: creamy, saucy comfort, with a consistency that's slightly more set than a stovetop version, thanks to a final bake in the oven. It stays voluptuous and molten as a result of a higher ratio of sauce to noodles, which are cooked completely so they don't soak up as much liquid. The Velveeta is necessary here, as it has sodium citrate, which prevents the sauce from separating in the oven. Elbow macaroni works fine, but cavatappi is an especially fun shape to eat with its telephone-cord bounciness.</p>
-  <section>
-  <h3>Ingredients</h3>
+
+<p class="intro">This macaroni and cheese recipe, inspired by Stouffer's, delivers the best of all worlds: creamy, saucy comfort, with a consistency that's slightly more set than a stovetop version, thanks to a final bake in the oven. It stays voluptuous and molten as a result of a higher ratio of sauce to noodles, which are cooked completely so they don't soak up as much liquid. The Velveeta is necessary here, as it has sodium citrate, which prevents the sauce from separating in the oven. Elbow macaroni works fine, but cavatappi is an especially fun shape to eat with its telephone-cord bounciness.</p>
+
+<section>
+ <h3>Ingredients</h3>
   
   <ul>
     <li>Salt</li>
@@ -58,7 +64,7 @@
     <li>Transfer to a 9-by-13-inch baking pan or dish and bake until bubbling at the edges, 15 to 20 minutes. Serve immediately.</li>
   </ol>  
   </section>
-  <section>
+  <section id="nutrition">
   <h3>Nutritional Information</h3>
   
   <ul>
